test/TestPhases/typechecker/invalid/prev.blc
import P "../imports/prev_imp"

@[EntryPoint]
activity Main () ()
    var o = P.mkO //missing ()
    var monitor: int32
    cobegin
        run P.A(o)(monitor)
    with
        run P.B(monitor)(o)
    end
end